--- a/bibliotecamtg/src/main/webapp/WEB-INF/web.xml
+++ b/bibliotecamtg/src/main/webapp/WEB-INF/web.xml
@@ -62,4 +62,9 @@
     <servlet-name>HelloWS</servlet-name>
     <url-pattern>/HelloWS</url-pattern>
   </servlet-mapping>
+  
+  <error-page>
+		<error-code>404</error-code>
+		<location>/WEB-INF/views/pages/404.jsp</location>
+	</error-page>
 </web-app>
